--- a/public/stylesheets/show.css
+++ b/public/stylesheets/show.css
@@ -112,6 +112,10 @@ select {
   color: #e9dac1;
 }
 
+#buyButton:hover {
+  cursor: not-allowed;
+}
+
 #addCartButton {
   background-color: #9ed2c6;
   color: #f7ecde;
