--- a/views/sellerIndex.ejs
+++ b/views/sellerIndex.ejs
@@ -8,7 +8,7 @@
         name="title"
         placeholder="Browse your life's work..."
       />
-      <button><img src="/images/search-icon.png" /></button>
+      <button><span class="material-symbols-outlined"> search </span></button>
     </form>
     <div id="cards">
       <%for (let craft of crafts){%>
