--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -1,5 +1,7 @@
 <% layout('layouts/boilerplate') -%>
 <link rel="stylesheet" href="/stylesheets/cart.css" />
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script defer src="/scripts/cartScript.js"></script>
 <div id="totalItems">
   <% if (!currentUser) {%>
   <div>Please sign in to purchase.</div>
@@ -12,17 +14,25 @@
     <div class="item">
       <div class="card">
         <div class="title"><%=item.product.title%></div>
-        <img src="<%=item.product.image%>" />
+        <a href="/api/v1/crafts/<%=item.product._id%>"
+          ><img src="<%=item.product.image%>"
+        /></a>
       </div>
-      <button>Remove</button>
-      <select name="quantity" id="quantity">
-        <% for (let i = 1; i <= item.product.stock ; i ++) {%> <% if(i ===
-        item.quantity) {%>
-        <option value="<%=i%>" selected="selected"><%=i%></option>
-        <% } else{%>
-        <option value="<%=i%>"><%=i%></option>
-        <% } %> <% } %>
-      </select>
+      <form action="/api/v1/cart/<%=item._id%>/?_method=DELETE" method="POST">
+        <button>Remove</button>
+      </form>
+      <form action="/api/v1/cart/?_method=PUT" method="POST">
+        <input type="hidden" name="craftId" value="<%=item.product._id%>" />
+        <select class="selector" name="quantity" id="quantity">
+          <% for (let i = 1; i <= item.product.stock ; i ++) {%> <% if(i ===
+          item.quantity) {%>
+          <option value="<%=i%>" selected="selected"><%=i%></option>
+          <% } else{%>
+          <option value="<%=i%>"><%=i%></option>
+          <% } %> <% } %>
+        </select>
+        <button class="updatebtn" hidden>Update</button>
+      </form>
       <div class="price">
         <span class="totalPrice"
           >$<%=(item.product.price*item.quantity).toFixed(2)%></span
@@ -34,7 +44,7 @@
   </div>
   <div id="checkOut">
     <span>How Will You Pay?</span>
-    <form action="">
+    <form action="/api/v1/cart/checkout?_method=DELETE" method="POST">
       <div>
         <input type="radio" id="cards" name="payment" />
         <label for="cards"
@@ -54,9 +64,9 @@
       </div>
       <div id="total">
         <span>Item(s) total</span>
-        <span>$<%=grandTotal%></span>
+        <span>$<%=grandTotal.toFixed(2)%></span>
       </div>
-      <button>Purchase!</button>
+      <button id="purchaseBtn" type="button">Purchase!</button>
     </form>
   </div>
   <% } %>
