--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -7,8 +7,23 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Dosis:wght@400;600;700&family=Fredericka+the+Great&family=Source+Serif+4:opsz@8..60&display=swap');
     </style>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <style>
+      .material-symbols-outlined {
+        font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 40;
+        color: rgba(0, 0, 0, 1);
+        font-size: 30px;
+      }
+    </style>
     <link rel="stylesheet" href="/stylesheets/naviForms.css" />
     <link rel="stylesheet" href="/stylesheets/authForms.css" />
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"
+    ></script>
     <script defer src="/scripts/authScript.js"></script>
     <title>LifeCraft</title>
   </head>
