--- a/public/stylesheets/authForms.css
+++ b/public/stylesheets/authForms.css
@@ -20,8 +20,9 @@
   width: 400px;
   height: 500px;
   position: fixed;
-  top: 25%;
-  left: 40%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border-radius: 25px;
   z-index: 100;
 }
