--- a/public/stylesheets/cart.css
+++ b/public/stylesheets/cart.css
@@ -1,3 +1,65 @@
+#confirmation {
+  display: none;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Source Serif 4', serif;
+  font-weight: 500;
+  background-color: white;
+  color: black;
+  width: 500px;
+  height: 250px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 25px;
+  z-index: 100;
+}
+
+#confirmationThanks {
+  text-align: center;
+  font-size: 30px;
+}
+
+#confirmationText {
+  text-align: center;
+  font-family: 'Dosis', sans-serif;
+  font-size: 20px;
+}
+
+#closeConfirmation {
+  position: absolute;
+  left: 100%;
+  top: -7%;
+  font-size: 30px;
+  color: white;
+  cursor: default;
+}
+
+#confirmCloseBtn {
+  font-size: 20px;
+  font-family: 'Source Serif 4', serif;
+  font-weight: 700;
+  width: 250px;
+  height: 40px;
+  border-radius: 50px;
+  transition: 300ms;
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.1);
+  margin-top: 25px;
+  text-decoration: none;
+  color: black;
+  background-color: rgba(158, 210, 198, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid black;
+}
+
+#confirmCloseBtn:hover {
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.3);
+}
+
 #totalItems {
   width: 100%;
   background-color: rgba(158, 210, 198, 0.5);
