Separated routes into controllers

--- a/views/new.ejs
+++ b/views/new.ejs
@@ -4,7 +4,7 @@
 <div id="product">
   <div id="imagePreview"><span>Your Image Here</span></div>
   <div id="newForm">
-    <form action="/api/v1/crafts/" method="POST">
+    <form action="/api/v1/seller/crafts" method="POST">
       <div class="editable">
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" placeholder="Title" />
