--- a/views/sellerIndex.ejs
+++ b/views/sellerIndex.ejs
@@ -24,7 +24,7 @@
   <div id="controls">
     <div id="storeName"><%=currentUser.username %></div>
     <div id="storeStat">725 Sales/&#x2605;&#x2605;&#x2605;&#x2605;&#x2605;</div>
-    <form action="/api/v1/crafts/new">
+    <form action="/api/v1/seller/crafts/new">
       <button id="new">New Craft</button>
     </form>
     <div id="filter">
