--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -6,7 +6,10 @@
     <img src="<%=craft.image%>" />
   </div>
   <div id="editForm">
-    <form action="/api/v1/crafts/<%=craft._id%>?_method=PUT" method="POST">
+    <form
+      action="/api/v1/seller/crafts/<%=craft._id%>?_method=PUT"
+      method="POST"
+    >
       <div class="editable">
         <label for="title">Title:</label>
         <input type="text" name="title" id="title" value="<%=craft.title %>" />
