--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate') -%>
-<link rel="stylesheet" href="/stylesheets/notFound.css" />
+<link rel="stylesheet" href="/stylesheets/error.css" />
 <div id="container">
-  <div class="bigText">How did you get here?</div>
+  <div class="bigText"><%= message %></div>
   <img src="/images/notFoundcat.gif" />
   <div>Click the <span class="bold">logo</span> to go back to safety.</div>
 </div>
