--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,13 +15,12 @@
 <section id="bannerUser">
   Welcome back, <span><%= currentUser.username %> </span>!
 </section>
-<% } else {%>
+<% } else {%> <% } %> <%- partial('./partials/flash') %>
 <section id="bannerWelcome">
   <div id="bannerCraft">Craft</div>
   Inspired By
   <div id="bannerLife">Life</div>
 </section>
-<% } %>
 <div class="indexTitle">Editor's Picks</div>
 <div class="container mt-4">
   <div class="row d-flex justify-content-center">
