Fixed error cat gif

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -2,6 +2,6 @@
 <link rel="stylesheet" href="/stylesheets/error.css" />
 <div id="container">
   <div class="bigText"><%= message %></div>
-  <img src="/images/notFoundcat.gif" />
+  <img src="/images/notfoundcat.gif" />
   <div>Click the <span class="bold">logo</span> to go back to safety.</div>
 </div>
