Editting checkout for heroku

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -57,7 +57,7 @@
     <span>How Will You Pay?</span>
     <form action="/api/v1/cart/checkout?_method=DELETE" method="POST">
       <div>
-        <input type="radio" id="cards" name="payment" />
+        <input type="radio" id="cards" name="payment" checked />
         <label for="cards"
           ><img src="/images/visa.png" /><img
             src="/images/mastercard.png"
